[gd_scene load_steps=4 format=3 uid="uid://drw18a6mcr2of"]

[ext_resource type="Script" uid="uid://ptdj0qmobihd" path="res://Script/BigPanel/CropWarehousePanel.gd" id="1_24g1t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kysg"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc6q1"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[node name="CropWarehousePanel" type="Panel"]
visible = false
offset_left = 58.0
offset_top = 77.0
offset_right = 1624.0
offset_bottom = 797.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8kysg")
script = ExtResource("1_24g1t")

[node name="TMBackGround" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -72.0
offset_top = -95.0
offset_right = 1678.0
offset_bottom = 804.0
color = Color(1, 1, 1, 0)

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_right = 1566.0
offset_bottom = 55.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.964706, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 40
text = "作物仓库"
horizontal_alignment = 1

[node name="SortContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 58.0
offset_right = 1566.0
offset_bottom = 121.0
alignment = 1

[node name="FilterLabel" type="Label" parent="SortContainer"]
self_modulate = Color(0.607843, 1, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "筛选："

[node name="Sort_All" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "全部"

[node name="Sort_Common" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "普通"

[node name="Sort_Superior" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "优良"

[node name="Sort_Rare" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "稀有"

[node name="Sort_Epic" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "史诗"

[node name="Sort_Legendary" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "传奇"

[node name="SortLabel" type="Label" parent="SortContainer"]
self_modulate = Color(0.607843, 1, 1, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "排序："

[node name="Sort_Price" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "按价格"

[node name="Sort_GrowTime" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "按生长时间"

[node name="Sort_Profit" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "按收益"

[node name="Sort_Level" type="Button" parent="SortContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "按等级"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 9.0
offset_top = 121.0
offset_right = 3890.0
offset_bottom = 1588.0
scale = Vector2(0.4, 0.4)
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_uc6q1")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
scroll_deadzone = -10

[node name="Warehouse_Grid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 8

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 1495.0
offset_top = 12.5
offset_right = 1555.0
offset_bottom = 75.5
theme_override_font_sizes/font_size = 40
text = "X"

[node name="RefreshButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 12.5001
offset_top = 12.5
offset_right = 100.5
offset_bottom = 75.5
theme_override_font_sizes/font_size = 40
text = "刷新"
